Fix TCK body reading inconsitency